Ui rework and added verification stage

--- a/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
@@ -9,7 +9,7 @@
         <div class="side-bar">
             <ul>
                 <a href="">Statistics</a>
-                <a asp-page="./Index" class="selected">Training Orders</a>
+                <a asp-page="./Index">Training Orders</a>
                 <a asp-page="./Index">Manage Employees</a>
                 <a href="">Account Settings</a>
             </ul>
@@ -17,7 +17,6 @@
         <div class="properties">
             <div class="user-form">
                 <p class="title">Approve Training Order #@Html.DisplayFor(model => model.TrainingOrder.Id)</p>
-                <hr />
                 <div class="field-container">
                     <form method="post">
 
@@ -101,9 +100,6 @@
 
                         <div class="form-group">
                             <input type="submit" value="Save" class="btn btnGreen" />
-                        </div>
-                        <div class="form-group">
-                            <a asp-page="Index" class="btn btnBlue">Return To Menu</a>
                         </div>
                     </form>
                 </div>
