--- a/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
@@ -10,7 +10,7 @@
         <div class="side-bar">
             <ul>
                 <a href="">Statistics</a>
-                <a asp-page="./Index" class="selected">Training Orders</a>
+                <a asp-page="./Index">Training Orders</a>
                 <a asp-page="./Index">Manage Employees</a>
                 <a href="">Account Settings</a>
             </ul>
@@ -19,7 +19,6 @@
         <div class="properties">
             <div class="user-form">
                 <p class="title">Edit Training Order #@Html.DisplayFor(model => model.TrainingOrder.Id)</p>
-                <hr/>
                 <div class="field-container">
                     <form method="post">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -143,9 +142,6 @@
                         </div>
                     </form>
                 </div>
-                <a asp-page="Index">
-                    <button class="btn btnBlue">Return To Menu</button>
-                </a>
             </div>
         </div>
     </div>
