--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -5,6 +5,8 @@
     ViewData["Title"] = "Index";
 }
 
+@using WCSTrainer.Pages.Components
+
 <section class="modal hidden">
     <div class="one">
         <button class="btn-close btn btnRed">⨉</button>
@@ -25,6 +27,7 @@
 
 <div class="panel">
     <div class="body">
+
         <div class="side-bar">
             <ul>
                 <a href="">Statistics</a>
@@ -50,6 +53,8 @@
                                         <p class="awaiting">@Html.DisplayFor(modelItem => item.status)</p>
                                     } else if (item.status.Equals("Active")) {
                                         <p class="active">@Html.DisplayFor(modelItem => item.status)</p>
+                                    } else if (item.status.Equals("Verified")) {
+                                        <p class="verified">@Html.DisplayFor(modelItem => item.status)</p>
                                     } else {
                                         <p class="completed">@Html.DisplayFor(modelItem => item.status)</p>
                                     }
@@ -65,18 +70,24 @@
                     <p>Search for a training order ID:</p>
                     <input type="search">
                 </div>
-                
                 <div class="selections">
                     <p class="title">Show in List:</p>
                     <div class="section">
-                        <input type="checkbox" id="co" onchange="completed(this)"/>
-                        <p class="info">Completed</p></div>
+                        <input type="checkbox" checked id="Verified" onchange="checkedBox(this)" />
+                        <p class="info">Verified</p>
+                    </div>
                     <div class="section">
-                        <input type="checkbox" id="ac" onchange="active(this)" />
-                        <p class="info">Active</p></div>
+                        <input type="checkbox" checked id="Completed" onchange="checkedBox(this)" />
+                        <p class="info">Completed</p>
+                    </div>
                     <div class="section">
-                        <input type="checkbox" id="aw" onchange="awaiting(this)" />
-                        <p class="info">Awaiting Approval</p></div>
+                        <input type="checkbox" checked id="Active" onchange="checkedBox(this)" />
+                        <p class="info">Active</p>
+                    </div>
+                    <div class="section">
+                        <input type="checkbox" checked id="Awaiting Approval" onchange="checkedBox(this)" />
+                        <p class="info">Awaiting Approval</p>
+                    </div>
                 </div>
                 <div class="btns">
                     <a asp-page="Create" class="btn btnWhite">Create New Order</a>
@@ -109,14 +120,6 @@
     closeModalBtn.addEventListener("click", closeModal);
     overlay.addEventListener("click", closeModal);
 
-    const co = document.querySelector('#co');
-    const ac = document.querySelector('#ac');
-    const aw = document.querySelector('#aw');
-
-    co.checked = true;
-    ac.checked = true;
-    aw.checked = true;
-
     function toggleDisplay(className, show) {
         var elements = document.getElementsByClassName(className);
         for (var i = 0; i < elements.length; i++) {
@@ -124,14 +127,8 @@
         }
     }
 
-    function completed(checkboxElem) {
-        toggleDisplay("Completed", checkboxElem.checked);
-    }
-    function awaiting(checkboxElem) {
-        toggleDisplay("Awaiting Approval", checkboxElem.checked);
-    }
-    function active(checkboxElem) {
-        toggleDisplay("Active", checkboxElem.checked);
+    function checkedBox(checkboxElem) {
+        toggleDisplay(checkboxElem.id, checkboxElem.checked);
     }
 
 </script>
