--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -90,8 +90,9 @@
                     </div>
                 </div>
                 <div class="btns">
-                    <a asp-page="Create" class="btn btnWhite">Create New Order</a>
-                    <a asp-page="AllView" class="btn btnWhite">Database Planning</a>
+                    <a asp-page="Create" class="btn btnWhite">Create Training Order</a>
+                    <a asp-page="AllView" class="btn btnWhite">Planning</a>
+                    <a asp-page="AllView" class="btn btnWhite">Scheduling</a>
                 </div>
             </div>
         </div>
